--- a/src/app/Components/Header/style.css
+++ b/src/app/Components/Header/style.css
@@ -1,3 +1,10 @@
-.header {
-  
+#header {
+  display: flex;
+  flex-flow: column wrap;
+  height: fit-content;
+}
+
+#top-bar {
+  display: flex;
+  justify-content: space-between;
 }
