--- a/src/app/Components/Header/style.css
+++ b/src/app/Components/Header/style.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-flow: column wrap;
   height: fit-content;
+  background-color: cadetblue;
+  padding: 1em 2em 2em 2em;
 }
 
 #top-bar {
