--- a/src/app/Components/Footer/style.css
+++ b/src/app/Components/Footer/style.css
@@ -1,3 +1,10 @@
 .footer {
-  
+  display: flex;
+  padding: 1em 2em 1em 2em;
+  background-color: cornflowerblue;
+  position:absolute;
+  bottom: 0;
+  width: 100%; 
+  height: fit-content;
+  box-sizing: border-box;
 }
