--- a/src/app/Components/MoviesList/style.css
+++ b/src/app/Components/MoviesList/style.css
@@ -2,11 +2,32 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  padding-inline-start: 0;
 }
 #genre-selector li {
   display: inline-block;
-
+  padding-right: 1em;
 }
+
+.genre-button {
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  padding-bottom: 10px;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+  text-transform: uppercase;
+}
+
+.genre-button:hover {
+  border-bottom: 1px solid red
+}
+
+.genre-button-selected {
+  border-bottom: 1px solid red
+}
+
 .movies-sort-selector {
 }
 .movie {
