fix: movies cards

--- a/src/app/Components/MoviesList/style.css
+++ b/src/app/Components/MoviesList/style.css
@@ -60,18 +60,26 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 
 .movie {
   justify-content: space-around;
-  margin: 1em;
+  margin-right: 1em;
+  margin-bottom: 1em;
 }
 
 .movie-image {
   min-height: 350px;
   min-width: 250px;
   background-color: rgb(197, 197, 206);
+}
+
+.movie-title {
+}
+
+.release-date {
+
 }
 
 .container-padding {
