--- a/src/app/Components/MoviesList/style.css
+++ b/src/app/Components/MoviesList/style.css
@@ -75,11 +75,28 @@
   background-color: rgb(197, 197, 206);
 }
 
-.movie-title {
+.movie-description {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.release-date {
+.movie-title {
+  flex-grow: 10;
+  flex-basis: 40%;
+}
 
+.movie-release-date {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 3px;
+  border-color: gray;
+  padding: 3px;
+}
+
+.movie-genre {
+  margin-top: 0px;
 }
 
 .container-padding {
