--- a/src/app/Components/MoviesList/style.css
+++ b/src/app/Components/MoviesList/style.css
@@ -83,8 +83,6 @@
 }
 
 .movie-title {
-  flex-grow: 10;
-  flex-basis: 40%;
 }
 
 .movie-release-date {
@@ -111,4 +109,53 @@
 
 .flex-grow-10 {
   flex-grow: 10;
+}
+
+.movie-three-dots-icon {
+  display: inherit;
+  position: relative;
+  left: 210px;
+  top: 40px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 5px;
+  margin-top: -35px;
+  background-color: #232323;
+  cursor: pointer;
+  background-image: radial-gradient(circle, white 2px, transparent 2px);
+  background-size: 100% 33.33%;
+}
+
+.movie-three-dots-icon:focus {
+  outline: none;
+}
+
+/* .movie .movie-three-dots-icon {
+  visibility: hidden;
+} */
+
+.movie:hover .movie-three-dots-icon.hide {
+  visibility: visible;
+  transition: visibility 0.1s ease 0.1s;
+}
+
+.movie-three-dots-menu {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  left: 140px;
+  top: 110px;
+  margin: 5px;
+  margin-top: -105px;
+  background-color: #232323;
+  cursor: pointer;
+}
+
+.movie-three-dots-menu.hide{
+  display: none;
+}
+
+.movie-three-dots-menu button {
+  display: flex;
 }
