--- a/src/app/Components/MoviesList/style.css
+++ b/src/app/Components/MoviesList/style.css
@@ -131,9 +131,9 @@
   outline: none;
 }
 
-/* .movie .movie-three-dots-icon {
+.movie .movie-three-dots-icon {
   visibility: hidden;
-} */
+}
 
 .movie:hover .movie-three-dots-icon.hide {
   visibility: visible;
@@ -143,12 +143,13 @@
 .movie-three-dots-menu {
   position: relative;
   width: 100px;
-  height: 100px;
+  height: 75px;
   left: 140px;
-  top: 110px;
+  top: 85px;
   margin: 5px;
-  margin-top: -105px;
+  margin-top: -80px;
   background-color: #232323;
+  border-radius: 3px;
   cursor: pointer;
 }
 
@@ -158,4 +159,24 @@
 
 .movie-three-dots-menu button {
   display: flex;
+  width: inherit;
+  color: white;
+  background: none;
+  cursor: pointer;
+  border-width: 0px;
+  padding: 5px
+}
+
+.movie-three-dots-menu button:focus {
+  outline: 0px solid grey;
+}
+
+.movie-three-dots-menu .edit-button:hover,
+.movie-three-dots-menu .delete-button:hover
+ {
+  background-color: #f65261
+}
+
+.close-menu-button {
+  text-indent: 75px;
 }
