--- a/src/app/Components/Header/style.css
+++ b/src/app/Components/Header/style.css
@@ -9,4 +9,19 @@
 #top-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+#search-icon {
+  background: none;
+  color: #f65261;
+  border: none;
+  cursor: pointer;
+  font-size: 1.8em;
+  padding: 0px 0px;;
+}
+
+#search-icon:focus {
+  outline: 0px solid grey;
 }
