--- a/src/app/Components/ModalWrap/style.css
+++ b/src/app/Components/ModalWrap/style.css
@@ -17,7 +17,8 @@
   margin: 5% auto;
   padding: 20px;
   height: fit-content;
-  width: fit-content;
+  width: min-content;
+  min-width: 250px;
 }
 
 .modal-header {
